Cambios, documentacion
