# src/package/db/models/tattoos.go
@@ -1,4 +1,4 @@
-// Code generated by SQLBoiler 4.16.2 (https://github.com/volatiletech/sqlboiler). DO NOT EDIT.
+// Code generated by SQLBoiler 4.18.0 (https://github.com/volatiletech/sqlboiler). DO NOT EDIT.
 // This file is meant to be re-generated in place and/or deleted at any time.
 
 package models
@@ -28,10 +28,10 @@ type Tattoo struct {
 	IDProfile   int64       `boil:"id_profile" json:"id_profile" toml:"id_profile" yaml:"id_profile"`
 	IDImage     int64       `boil:"id_image" json:"id_image" toml:"id_image" yaml:"id_image"`
 	Likes       int         `boil:"likes" json:"likes" toml:"likes" yaml:"likes"`
-	CreatedAt   time.Time   `boil:"created_at" json:"created_at" toml:"created_at" yaml:"created_at"`
-	IDPost      null.Int64  `boil:"id_post" json:"id_post,omitempty" toml:"id_post" yaml:"id_post,omitempty"`
 	Description null.String `boil:"description" json:"description,omitempty" toml:"description" yaml:"description,omitempty"`
+	CreatedAt   time.Time   `boil:"created_at" json:"created_at" toml:"created_at" yaml:"created_at"`
 	Popularity  int         `boil:"popularity" json:"popularity" toml:"popularity" yaml:"popularity"`
+	IDPost      null.Int64  `boil:"id_post" json:"id_post,omitempty" toml:"id_post" yaml:"id_post,omitempty"`
 	Views       int         `boil:"views" json:"views" toml:"views" yaml:"views"`
 	Coordinate  null.String `boil:"coordinate" json:"coordinate,omitempty" toml:"coordinate" yaml:"coordinate,omitempty"`
 
@@ -44,10 +44,10 @@ var TattooColumns = struct {
 	IDProfile   string
 	IDImage     string
 	Likes       string
-	CreatedAt   string
-	IDPost      string
 	Description string
+	CreatedAt   string
 	Popularity  string
+	IDPost      string
 	Views       string
 	Coordinate  string
 }{
@@ -55,10 +55,10 @@ var TattooColumns = struct {
 	IDProfile:   "id_profile",
 	IDImage:     "id_image",
 	Likes:       "likes",
-	CreatedAt:   "created_at",
-	IDPost:      "id_post",
 	Description: "description",
+	CreatedAt:   "created_at",
 	Popularity:  "popularity",
+	IDPost:      "id_post",
 	Views:       "views",
 	Coordinate:  "coordinate",
 }
@@ -68,10 +68,10 @@ var TattooTableColumns = struct {
 	IDProfile   string
 	IDImage     string
 	Likes       string
-	CreatedAt   string
-	IDPost      string
 	Description string
+	CreatedAt   string
 	Popularity  string
+	IDPost      string
 	Views       string
 	Coordinate  string
 }{
@@ -79,10 +79,10 @@ var TattooTableColumns = struct {
 	IDProfile:   "tattoos.id_profile",
 	IDImage:     "tattoos.id_image",
 	Likes:       "tattoos.likes",
-	CreatedAt:   "tattoos.created_at",
-	IDPost:      "tattoos.id_post",
 	Description: "tattoos.description",
+	CreatedAt:   "tattoos.created_at",
 	Popularity:  "tattoos.popularity",
+	IDPost:      "tattoos.id_post",
 	Views:       "tattoos.views",
 	Coordinate:  "tattoos.coordinate",
 }
@@ -94,10 +94,10 @@ var TattooWhere = struct {
 	IDProfile   whereHelperint64
 	IDImage     whereHelperint64
 	Likes       whereHelperint
-	CreatedAt   whereHelpertime_Time
-	IDPost      whereHelpernull_Int64
 	Description whereHelpernull_String
+	CreatedAt   whereHelpertime_Time
 	Popularity  whereHelperint
+	IDPost      whereHelpernull_Int64
 	Views       whereHelperint
 	Coordinate  whereHelpernull_String
 }{
@@ -105,10 +105,10 @@ var TattooWhere = struct {
 	IDProfile:   whereHelperint64{field: "\"tattoos\".\"id_profile\""},
 	IDImage:     whereHelperint64{field: "\"tattoos\".\"id_image\""},
 	Likes:       whereHelperint{field: "\"tattoos\".\"likes\""},
-	CreatedAt:   whereHelpertime_Time{field: "\"tattoos\".\"created_at\""},
-	IDPost:      whereHelpernull_Int64{field: "\"tattoos\".\"id_post\""},
 	Description: whereHelpernull_String{field: "\"tattoos\".\"description\""},
+	CreatedAt:   whereHelpertime_Time{field: "\"tattoos\".\"created_at\""},
 	Popularity:  whereHelperint{field: "\"tattoos\".\"popularity\""},
+	IDPost:      whereHelpernull_Int64{field: "\"tattoos\".\"id_post\""},
 	Views:       whereHelperint{field: "\"tattoos\".\"views\""},
 	Coordinate:  whereHelpernull_String{field: "\"tattoos\".\"coordinate\""},
 }
@@ -171,9 +171,9 @@ func (r *tattooR) GetIDTattooTattooCategories() TattooCategorySlice {
 type tattooL struct{}
 
 var (
-	tattooAllColumns            = []string{"id", "id_profile", "id_image", "likes", "created_at", "id_post", "description", "popularity", "views", "coordinate"}
+	tattooAllColumns            = []string{"id", "id_profile", "id_image", "likes", "description", "created_at", "popularity", "id_post", "views", "coordinate"}
 	tattooColumnsWithoutDefault = []string{"id_profile", "id_image"}
-	tattooColumnsWithDefault    = []string{"id", "likes", "created_at", "id_post", "description", "popularity", "views", "coordinate"}
+	tattooColumnsWithDefault    = []string{"id", "likes", "description", "created_at", "popularity", "id_post", "views", "coordinate"}
 	tattooPrimaryKeyColumns     = []string{"id"}
 	tattooGeneratedColumns      = []string{}
 )
@@ -1764,14 +1764,14 @@ func (o *Tattoo) Upsert(ctx context.Context, exec boil.ContextExecutor, updateOn
 
 	if len(cache.retMapping) != 0 {
 		err = exec.QueryRowContext(ctx, cache.query, vals...).Scan(returns...)
-		if err == sql.ErrNoRows {
+		if errors.Is(err, sql.ErrNoRows) {
 			err = nil // CockcorachDB doesn't return anything when there's no update
 		}
 	} else {
 		_, err = exec.ExecContext(ctx, cache.query, vals...)
 	}
 	if err != nil {
-		return errors.Wrap(err, "models: unable to upsert tattoos")
+		return fmt.Errorf("models: unable to upsert tattoos: %w", err)
 	}
 
 	if !cached {
